--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 						<div class="content-depoimentos">
 							<p>"É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de “Conteúdo aqui, conteúdo aqui...”.</p>
 
-							<p class="autor">Gustavo Santos Arruda, Analista de Sistemas - Ábaco Tecnologia de Informação</p>
+							<h5 class="autor">Gustavo Santos Arruda, Analista de Sistemas - Ábaco Tecnologia de Informação</h5>
 						</div>
 					</div>
 
@@ -446,7 +446,12 @@
 	<footer id="footer" class="clear ">
 		<div id="footer-content" class="">
 			<div id="redes-sociais">
-				
+				<ul class="">
+					<li><a href="" title="" class="facebook">facebook</a></li>
+					<li><a href="" title="" class="twitter">twitter</a></li>
+					<li><a href="" title="" class="google">google +</a></li>
+					<li><a href="" title="" class="youtube">youtube</a></li>
+				</ul>
 			</div>
 		</div>
 	</footer>
