--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 </head>
 <body class="metro" style="">
-    <header class="content-header">
+    <header id="content-header-home">
 
-		<nav class="horizontal-menu-top compact">
+		<nav id"" class="horizontal-menu-top-home compact">
             <ul class="">
                 <li><a href="#">Quem somos</a></li>
                 <li><a href="#">Como funciona?</a></li>
@@ -161,7 +161,7 @@
 					auto:true, 
 					loop:true,
 					clickstop:false,
-					pause:2000
+					pause:8000
 				});				
 			});		    
 		    </script>
