--- a/noticias.html
+++ b/noticias.html
@@ -82,78 +82,99 @@
 			        <li class="active"><a href="#">Notícias</a></li>
 			    </ul>
 			</nav>
-    		<h2 class="titles-big linha-h2">Notícias</h2>
+    		<h2 class="titles-big title-noticias">Notícias</h2>
 	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<span class="span6">01/01/2014</span>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
+	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<span class="span6">01/01/2014</span>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
+	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<span class="span6">01/01/2014</span>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
+	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<span class="span6">01/01/2014</span>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
+	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<span class="span6">01/01/2014</span>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
+	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<span class="span6">01/01/2014</span>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
+	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<span class="span6">01/01/2014</span>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
-	    			<article class="">
-	    				<span class="span6">01/01/2014</span>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
-	    			</article>
-    			</a>
-
-	    		<a href="" title="" class="article-lista-noticias">
-	    			<article class="">
-	    				<span class="span6">01/01/2014</span>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
-	    			</article>
-    			</a>
+	    		
     	</div><!-- end noticias -->
 				<div class="pagination paginacao">
 				    <ul>
