--- a/noticias-ver.html
+++ b/noticias-ver.html
@@ -84,9 +84,35 @@
 			    </ul>
 			</nav>
     		<h2 class="titles-big linha-h2">ADVOGADO LANÇA LIVRO DE 7,5 METROS</h2>
-			<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçã</p>
+			<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçã</p>
 
-			<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçã</p>
+			<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçã</p>
+
+			<div id="ultimas-noticias">
+				<h2 class="titles-big linha-h2">Últimas notícias</h2>
+				<ul id="lista-noticias">
+					<li>
+						<a href="" title="ADVOGADO LANÇA LIVRO DE 7,5 METROS">
+							<h5>&#8594; ADVOGADO LANÇA LIVRO DE 7,5 METROS</h5>
+						</a>
+					</li>
+					<li>
+						<a href="" title="A DIGITAÇÃO É UMA DAS PREOCUPAÇÕES DO CONCURSEIRO">
+							<h5>&#8594; A DIGITAÇÃO É UMA DAS PREOCUPAÇÕES DO CONCURSEIRO</h5>
+						</a>
+					</li>
+					<li>
+						<a href="" title="ADVOGADO LANÇA LIVRO DE 7,5 METROS">
+							<h5>&#8594; ADVOGADO LANÇA LIVRO DE 7,5 METROS</h5>
+						</a>
+					</li>
+					<li>
+						<a href="" title="A DIGITAÇÃO É UMA DAS PREOCUPAÇÕES DO CONCURSEIRO">
+							<h5>&#8594; A DIGITAÇÃO É UMA DAS PREOCUPAÇÕES DO CONCURSEIRO</h5>
+						</a>
+					</li>
+				</ul>
+			</div><!-- end ultimas-noticias -->
 	    		
     	</div><!-- end noticias -->
 	</div><!-- end container -->
