--- a/artigos-ver.html
+++ b/artigos-ver.html
@@ -86,11 +86,47 @@
 			</nav>
     		<h2 class="titles-big linha-h2">ADVOGADO LANÇA LIVRO DE 7,5 METROS</h2>
 
-    		<h4 style="margin-bottom:25px;"><b>Autor:</b> Gustavo Santos Arruda - Analista de Sistemas</h4>
-
 			<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçã</p>
 
 			<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçãÉ um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramaçã</p>
+
+			<div id="autor-artigo">
+				<div>
+					<figure>
+						<img src="./assets/imgs/artigo.jpg" alt="" class="cycle polaroid">
+					</figure>
+					<h5>Profº Gustavo Santos Arruda</h5>
+					<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo</p>
+				</div>
+			</div>
+
+
+			<div id="ultimas-noticias">
+				<h2 class="titles-big linha-h2">Últimos artigos</h2>
+				<ul id="lista-noticias">
+					<li>
+						<a href="" title="ADVOGADO LANÇA LIVRO DE 7,5 METROS">
+							<h5>&#8594; ADVOGADO LANÇA LIVRO DE 7,5 METROS</h5>
+						</a>
+					</li>
+					<li>
+						<a href="" title="A DIGITAÇÃO É UMA DAS PREOCUPAÇÕES DO CONCURSEIRO">
+							<h5>&#8594; A DIGITAÇÃO É UMA DAS PREOCUPAÇÕES DO CONCURSEIRO</h5>
+						</a>
+					</li>
+					<li>
+						<a href="" title="ADVOGADO LANÇA LIVRO DE 7,5 METROS">
+							<h5>&#8594; ADVOGADO LANÇA LIVRO DE 7,5 METROS</h5>
+						</a>
+					</li>
+					<li>
+						<a href="" title="A DIGITAÇÃO É UMA DAS PREOCUPAÇÕES DO CONCURSEIRO">
+							<h5>&#8594; A DIGITAÇÃO É UMA DAS PREOCUPAÇÕES DO CONCURSEIRO</h5>
+						</a>
+					</li>
+				</ul>
+			</div><!-- end ultimas-artigos -->
+
 	    		
     	</div><!-- end noticias -->
 	</div><!-- end container -->
