--- a/artigos.html
+++ b/artigos.html
@@ -83,92 +83,68 @@
 			    </ul>
 			</nav>
     		<h2 class="titles-big linha-h2">Artigos</h2>
-	    		<a href="" title="" class="article-lista-noticias">
-	    			<article class="">
-	    				<p class="span6">01/01/2014</p>
-						<p>Autor: <b><i>Gustavo Santos Arruda</i></b></p>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+    			<a href="noticias-ver.html" title="" class="article-lista-noticias">
+	 	    		<article class="">
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
+	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<p class="span6">01/01/2014</p>
-						<p>Autor: <b><i>Gustavo Santos Arruda</i></b></p>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
+	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<p class="span6">01/01/2014</p>
-						<p>Autor: <b><i>Gustavo Santos Arruda</i></b></p>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
+	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<p class="span6">01/01/2014</p>
-						<p>Autor: <b><i>Gustavo Santos Arruda</i></b></p>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
-	    			</article>
-    			</a>
-	    		<a href="" title="" class="article-lista-noticias">
-	    			<article class="">
-	    				<p class="span6">01/01/2014</p>
-						<p>Autor: <b><i>Gustavo Santos Arruda</i></b></p>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
 
-	    		<a href="" title="" class="article-lista-noticias">
+	    		<a href="noticias-ver.html" title="" class="article-lista-noticias">
 	    			<article class="">
-	    				<p class="span6">01/01/2014</p>
-						<p>Autor: <b><i>Gustavo Santos Arruda</i></b></p>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
-	    			</article>
-    			</a>
-
-	    		<a href="" title="" class="article-lista-noticias">
-	    			<article class="">
-	    				<p class="span6">01/01/2014</p>
-						<p>Autor: <b><i>Gustavo Santos Arruda</i></b></p>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
-	    			</article>
-    			</a>
-
-	    		<a href="" title="" class="article-lista-noticias">
-	    			<article class="">
-	    				<p class="span6">01/01/2014</p>
-						<p>Autor: <b><i>Gustavo Santos Arruda</i></b></p>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
-	    			</article>
-    			</a>
-
-	    		<a href="" title="" class="article-lista-noticias">
-	    			<article class="">
-	    				<p class="span6">01/01/2014</p>
-						<p>Autor: <b><i>Gustavo Santos Arruda</i></b></p>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
-	    			</article>
-    			</a>
-
-	    		<a href="" title="" class="article-lista-noticias">
-	    			<article class="">
-	    				<p class="span6">01/01/2014</p>
-						<p>Autor: <b><i>Gustavo Santos Arruda</i></b></p>
-	    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-	    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				<aside class="span1 data-noticias left">
+	    					<span class="">06</span>
+	    					<span class="">ABR</span>
+	    				</aside>
+	    				<aside class="right">
+		    				<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
+		    				<p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação</p>
+	    				</aside>
 	    			</article>
     			</a>
     	</div><!-- end noticias -->
