--- a/aluno-home - Copia.html
+++ b/aluno-home - Copia.html
@@ -107,20 +107,21 @@
 	                            <td><a href="" title="" id="" class="createWindow">Língua Portuguesa</a></td>
 	                            <td class="right">HENRIQUE CASTELO BRANCO</td>
 	                            <td class="right">15:32</td>
-                            	<td class="right"><a href="" title=""><img src="./assets/imgs/delete.png" alt=""></a></td>
+	                            <td class="right"><a href="" title=""></a></td>
 	                        </tr>
 	                        <tr>
 	                            <td><a href="" title="">Gestão de Pessoas</a></td>
 	                            <td class="right">HENRIQUE CASTELO BRANCO</td>
 	                            <td class="right">15:32</td>
-                            	<td class="right"><a href="" title=""><img src="./assets/imgs/delete.png" alt=""></a></td>
 
+	                            <td class="right"><a href="" title=""></a></td>
 	                        </tr>
 	                        <tr>
 	                            <td><a href="" title="">Administração Geral</a></td>
 	                            <td class="right">HENRIQUE CASTELO BRANCO</td>
 	                            <td class="right">15:32</td>
-                            	<td class="right"><a href="" title=""><img src="./assets/imgs/delete.png" alt=""></a></td>
+
+	                            <td class="right"><a href="" title=""></a></td>
 	                        </tr>
 	                        </tbody>
 
@@ -134,11 +135,34 @@
                        Últimas Aulas
                     </div>
                     <div class="panel-content" style="overflow: auto;">
+	                    <!-- div id="legenda-aulas">
+	                    	<div class="concluido span2">
+	                    		<p>Concluída</p>
+	                    	</div>
+
+	                    	<div class="andamento left span2">
+	                    		<p>Andamento</p>
+	                    	</div>
+
+	                    	<div class="nao-iniciado left span2">
+	                    		<p>Não-iniciada</p>
+	                    	</div>
+
+	                    	<div class="expirado left span2">
+	                    		<p>Expirada</p>
+	                    	</div>
+	                    </div>
+
+
+                    </div -->
+
+
 					<table class="table hovered">
                         <thead>
                         <tr>
                             <th class="text-left">Aula</th>
                             <th class="text-left">Profº</th>
+                            <th class="text-left">Iniciado em</th>
 							<th class="text-left">Último acesso</th>
                             <th class="text-left">Minutos</th>
                             <th class="text-left">Assistido(%)</th>
@@ -148,27 +172,33 @@
 
                         <tbody>
                         <tr>
-                            <td><a href="" title="" id="" class="createWindow">Língua Portuguesa</a></td>
+                            <td><a href="" title="" id="" class="createWindow concluido">Língua Portuguesa</a></td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
+                            <td class="right">12/04/2014</td>
                             <td class="right">12/04/2014 15:32</td>
 							<td class="right">120</td>
 							<td class="right">20%</td>
+
                             <td class="right"><a href="" title="" class="revisar">Continuar</a></td>
                         </tr>
                         <tr>
-                            <td><a href="" title="" class="">Gestão de Pessoas</a></td>
+                            <td><a href="" title="" class="nao-iniciado">Gestão de Pessoas</a></td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
-                            <td class="right">12/04/2014 15:32</td>
+                            <td class="right">12/04/2014</td>
+                            <td class="right">-</td>
 							<td class="right">120</td>
 							<td class="right">20%</td>
+
                             <td class="right"><a href="" title="" class="iniciar">Continuar</a></td>
                         </tr>
                         <tr>
-                            <td><a href="" title="" class="">Administração Geral</a></td>
+                            <td><a href="" title="" class="expirado">Administração Geral</a></td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
+                            <td class="right">12/04/2014</td>
                             <td class="right">12/04/2014 15:32</td>
 							<td class="right">120</td>
 							<td class="right">20%</td>
+
                             <td class="right"><a href="" title="" class="revisar">Continuar</a></td>
                         </tr>
                         </tbody>
@@ -180,7 +210,7 @@
                 </div>
 
 
-                <div class="panel span7 left margin-top">
+                <div class="panel span7 left">
                     <div class="panel-header bg-lightBlue fg-white">
                        Meus Pedidos
                     </div>
@@ -196,7 +226,7 @@
                     </div>
                 </div>
 
-                <div class="panel span6 left margin-top">
+                <div class="panel span7 left">
                     <div class="panel-header bg-lightBlue fg-white">
                        Perguntas Frequentes
                     </div>
