--- a/aluno-home.html
+++ b/aluno-home.html
@@ -213,9 +213,11 @@
                         <a href="" title="" class="ver-todas-simples">Ver todas ></a>
                 </div>
 
-    			
+    			</div>
+    		</div>
     	</div><!-- end noticias -->
 	</div><!-- end container -->
+
 	<footer id="footer" class="clear ">
 		<div id="footer-content" class="">
 			<div id="redes-sociais">
