Saldo - area aluno

--- a/aluno-home.html
+++ b/aluno-home.html
@@ -57,6 +57,7 @@
         		</div>
         		<div id="carrinho-compras">
 					<img src="./assets/imgs/carrinho.png" alt="">
+					<span class="white">Total ítens no carrinho:</span>
 					<a href="" title="" class="quantidade-carrinho">2</a>
         		</div>
 
@@ -82,6 +83,7 @@
 			        <li><a href="#" class="mensagens">Mensagens<span class="numeros">3</span></a></li>
 			        <li><a href="#" class="dados">Meus Dados</a></li>
 			        <li><a href="#" class="preferencias">Meus Pedidos</a></li>
+			        <li><a href="#" class="credito">R$ 154.00 <span>saldo </span></a></li>
 			    </ul>
 			</nav>
     		<h3 class="titulo-area-aluno">Olá, Gustavo Santos Arruda!</h3>
