Alterações - home aluno

--- a/aluno-home.html
+++ b/aluno-home.html
@@ -87,9 +87,65 @@
 			    </ul>
 			</nav>
     		<h3 class="titulo-area-aluno">Olá, Gustavo Santos Arruda!</h3>
-    			<p>Você tem <b>3</b> mensagens não lidas.</p>
+				<div class="clear" style="">
+	                <div class="panel span7 left margin-top">
+	                    <div class="panel-header bg-lightBlue fg-white">
+	                       Meus Pedidos
+	                    </div>
+	                    <div class="panel-content">
+	                        <div id="saldo" class="left">
+	                        	<p>Saldo disponível:</p>
+	                        	<span>R$ 154,00</span>
+	                        	<button class="botao-comprar"><a href="" title="">Comprar mais</a></button>
+	                        </div>
+	                        <div id="pedidos-abertos">
+	                        	<a href="" title="" class="numeros-pedidos">0</a>
+	                        	<p>Pedidos Abertos</p>
+	                        </div>
+	                    </div>
+					</div>
 
-				<div id="tabela-mensagens" class="panel">
+	                <div class="panel span7 left margin-top">
+	                    <div class="panel-header bg-lightBlue fg-white">
+	                       Últimas Aulas
+	                    </div>
+	                    <div class="panel-content">
+		                    <table class="table hovered">
+								<thead>
+		                        <tr>
+		                            <th class="text-left">Aula</th>
+		                            <th class="text-left">Assistido(%)</th>
+		                            <th class="text-left"></th>
+		                        </tr>
+		                        </thead>
+
+		                        <tbody>
+		                        <tr>
+		                            <td><a href="" title="" id="" class="createWindow">Língua Portuguesa</a></td>
+									<td class="right">20%</td>
+		                            <td class="right"><a href="" title="" class="revisar">Continuar</a></td>
+		                        </tr>
+		                        <tr>
+		                            <td><a href="" title="" class="">Gestão de Pessoas</a></td>
+									<td class="right">20%</td>
+		                            <td class="right"><a href="" title="" class="iniciar">Continuar</a></td>
+		                        </tr>
+		                        <tr>
+		                            <td><a href="" title="" class="">Administração Geral</a></td>
+									<td class="right">20%</td>
+		                            <td class="right"><a href="" title="" class="revisar">Continuar</a></td>
+		                        </tr>
+							</tbody>
+
+							<tfoot></tfoot>
+	                    </table>
+                	</div>
+    			</div>
+            </div>
+
+    			
+            <div class="clear margin-top" style="">
+				<div id="tabela-mensagens" class="panel margin-top">
                     <div class="panel-header bg-lightBlue fg-white">
                        Mensagens
                     </div>
@@ -130,93 +186,25 @@
 	                    </table>
                     </div>
                 </div>
+            </div>
 
- 				<div class="panel">
-                    <div class="panel-header bg-lightBlue fg-white">
-                       Últimas Aulas
-                    </div>
-                    <div class="panel-content" style="overflow: auto;">
-					<table class="table hovered">
-                        <thead>
-                        <tr>
-                            <th class="text-left">Aula</th>
-                            <th class="text-left">Profº</th>
-							<th class="text-left">Último acesso</th>
-                            <th class="text-left">Minutos</th>
-                            <th class="text-left">Assistido(%)</th>
-                            <th class="text-left"></th>
-                        </tr>
-                        </thead>
-
-                        <tbody>
-                        <tr>
-                            <td><a href="" title="" id="" class="createWindow">Língua Portuguesa</a></td>
-                            <td class="right">HENRIQUE CASTELO BRANCO</td>
-                            <td class="right">12/04/2014 15:32</td>
-							<td class="right">120</td>
-							<td class="right">20%</td>
-                            <td class="right"><a href="" title="" class="revisar">Continuar</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="" title="" class="">Gestão de Pessoas</a></td>
-                            <td class="right">HENRIQUE CASTELO BRANCO</td>
-                            <td class="right">12/04/2014 15:32</td>
-							<td class="right">120</td>
-							<td class="right">20%</td>
-                            <td class="right"><a href="" title="" class="iniciar">Continuar</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="" title="" class="">Administração Geral</a></td>
-                            <td class="right">HENRIQUE CASTELO BRANCO</td>
-                            <td class="right">12/04/2014 15:32</td>
-							<td class="right">120</td>
-							<td class="right">20%</td>
-                            <td class="right"><a href="" title="" class="revisar">Continuar</a></td>
-                        </tr>
-                        </tbody>
-
-                        <tfoot></tfoot>
-                    </table>
-
-
+			<div class="panel span6 left margin-top clear">
+                <div class="panel-header bg-lightBlue fg-white">
+                   Perguntas Frequentes
                 </div>
+                <div class="panel-content">
+                    <ul id="lista-perguntas-frequentes">
+                    	<li>
+	                        <a href="" title="">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s?</a>
+						</li>
+                    	<li>
+	                        <a href="" title="">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s?</a>
+						</li>
+                    </ul>
+                    <a href="" title="" class="ver-todas-simples">Ver todas ></a>
+            	</div>
+			</div>
 
-
-                <div class="panel span7 left margin-top">
-                    <div class="panel-header bg-lightBlue fg-white">
-                       Meus Pedidos
-                    </div>
-                    <div class="panel-content">
-                        <div id="pedidos-abertos" class="left">
-                        	<a href="" title="" class="numeros-pedidos">0</a>
-                        	<p>Pedidos Abertos</p>
-                        </div>
-                        <div id="pedidos-concluidos">
-                        	<a href="" title="" class="numeros-pedidos">10</a>
-                        	<p>Pedidos Concluídos</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="panel span6 left margin-top">
-                    <div class="panel-header bg-lightBlue fg-white">
-                       Perguntas Frequentes
-                    </div>
-                    <div class="panel-content">
-	                    <ul id="lista-perguntas-frequentes">
-	                    	<li>
-		                        <a href="" title="">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s?</a>
-							</li>
-	                    	<li>
-		                        <a href="" title="">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s?</a>
-							</li>
-	                    </ul>
-
-                        <a href="" title="" class="ver-todas-simples">Ver todas ></a>
-                </div>
-
-    			</div>
-    		</div>
     	</div><!-- end noticias -->
 	</div><!-- end container -->
 
