--- a/aluno-home.html
+++ b/aluno-home.html
@@ -93,9 +93,9 @@
 	                       Meus Pedidos
 	                    </div>
 	                    <div class="panel-content">
-	                        <div id="saldo" class="left">
-	                        	<p>Saldo disponível:</p>
+	                        <div id="saldo" class="left margin-top">
 	                        	<span>R$ 154,00</span>
+								<p>Saldo disponível:</p>
 	                        	<button class="botao-comprar"><a href="" title="">Comprar mais</a></button>
 	                        </div>
 	                        <div id="pedidos-abertos">
@@ -105,7 +105,7 @@
 	                    </div>
 					</div>
 
-	                <div class="panel span7 left margin-top">
+	                <div class="panel span7 margin-top" style="float: right">
 	                    <div class="panel-header bg-lightBlue fg-white">
 	                       Últimas Aulas
 	                    </div>
@@ -144,12 +144,13 @@
             </div>
 
     			
-            <div class="clear margin-top" style="">
+            <div class="clear margin-top" style="padding-top:10px;">
 				<div id="tabela-mensagens" class="panel margin-top">
                     <div class="panel-header bg-lightBlue fg-white">
                        Mensagens
                     </div>
                     <div class="panel-content">
+                    <p>Você tem <b>3</b> novas mensagens!</p>
 						<table class="table hovered">
 	                        <thead>
 	                        <tr>
