--- a/aluno-home.html
+++ b/aluno-home.html
@@ -93,14 +93,14 @@
 	                       Meus Pedidos
 	                    </div>
 	                    <div class="panel-content">
-	                        <div id="saldo" class="left margin-top">
+	                        <div id="saldo" class="left">
+	                        	<p>Saldo disponível:</p>
 	                        	<span>R$ 154,00</span>
-								<p>Saldo disponível:</p>
 	                        	<button class="botao-comprar"><a href="" title="">Comprar mais</a></button>
 	                        </div>
 	                        <div id="pedidos-abertos">
+	 							<p>Pedidos Abertos</p>
 	                        	<a href="" title="" class="numeros-pedidos">0</a>
-	                        	<p>Pedidos Abertos</p>
 	                        </div>
 	                    </div>
 					</div>
