Carrinho, finalizacao completa dos pedidos

--- a/lista-pedidos.html
+++ b/lista-pedidos.html
@@ -79,65 +79,41 @@
 			    <ul>
 			     	<li><a href="#"><i class="icon-home"></i></a></li>
 			        <li><a href="#">Home</a></li>
-			        <li class="active"><a href="#">Carrinho de Compras</a></li>
+			        <li><a href="#">Carrinho</a></li>
+			        <li><a href="#">Finalizar Pedido</a></li>
+			        <li class="active"><a href="#">Pagamento</a></li>
 			    </ul>
 			</nav>
-    		<h2 class="titles-big linha-h2">Carrinho de Compras</h2>
+    		<h2 class="titles-big linha-h2">Pagamento</h2>
 	    		<table class="table">
 					<thead>
 		            <tr>
-		                <th class="text-left">Nome Pproduto</th>
+						<th class="text-left">Código</th>
+		                <th class="text-left">Data</th>
 		                <th class="text-left">Valor</th>
+		                <th class="text-left">Satus</th>
 		                <th class="text-left"></th>
 		            </tr>
 		            </thead>
 
 		            <tbody>
 		            <tr>
-		                <td><a href="" title="" id="" class="createWindow">Língua Portuguesa</a></td>
+		            	<td class="right">0007272</td>
+		                <td class="right">01/01/2014</td>
 						<td class="right">R$ 20,00</td>
-		                <td class="right"><a href="" title="" class="deleta-item">Deletar</a></td>
-		            </tr>
-		            <tr>
-		                <td><a href="" title="" class="">Gestão de Pessoas</a></td>
-		                <td class="right">R$ 20,00</td>
-		                <td class="right"><a href="" title="" class="deleta-item">Deletar</a></td>
-		            </tr>
-		            <tr>
-		                <td><a href="" title="" class="">Administração Geral</a></td>
-						<td class="right">R$ 20,00</td>
-		                <td class="right" style="width: 45px;"><a href="" title="" class="deleta-item">Deletar</a></td>
+		                <td class="right">Aberto</td>
+		                <td class="text-right"><a href="" title=""><img src="./assets/imgs/180x25-pagar.gif" alt=""></a></td>
 		            </tr>
 				</tbody>
 
 				<tfoot></tfoot>
 		    </table>
 
-	    	<div id="vale-cupom"class="metro one-column">
-	    		<div class="span10 left">
-					<p>Se você tem um cupom de desconto, insira-o ao lado:</p>
-				</div>
-				<div class="span4 floatright">
-					<div class="input-control text left">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
-					</div>
-					<div class="floatright">
-						<input type="submit" value="Validar Cupom">
-					</div>
-				</div>
-	    	</div>
 
-	    	<div class="metro one-column box-total">
-	    		<div class="span4 left">
-					<a href="" title="Continuar Comprando" class="continuar-comprando">Continuar Comprando</a>
-				</div>
-				<div id="total-carrinho" class="span4">
-					<span class="label-total">Total</span>
-					<span class="label-valor">R$ 154,00</span>
-				</div>
+			<div class="metro one-column box-total">
+				<a href="" title="Continuar Comprando" class="continuar-comprando left">Continuar Comprando</a>
+				<!--a href="" title="Finalizar Compra" class="finalizar-compra">Finalizar Compra</a -->
 	    	</div>
-			<a href="" title="Finalizar Compra" class="finalizar-compra margin-top">Finalizar Compra</a>
 	    	<div class="metro one-column margin-top">
 	    		<img src='https://p.simg.uol.com.br/out/pagseguro/i/banners/divulgacao/728x90_10X_pagseguro.gif' alt='' />
 	    	</div>
