--- a/contato.html
+++ b/contato.html
@@ -112,6 +112,10 @@
 				        <option>Value 3</option>
 				    </select>
 				</div>
+				<label>Mensagem:</label>
+				<div class="input-control textarea">
+				    <textarea></textarea>
+				</div>
 				
 				<input type="submit" value="Enviar contato">
 			</form>
