--- a/505.html
+++ b/505.html
@@ -79,82 +79,27 @@
 			    <ul>
 			     	<li><a href="#"><i class="icon-home"></i></a></li>
 			        <li><a href="#">Home</a></li>
-			        <li><a href="#">Carrinho</a></li>
-			        <li class="active"><a href="#">Finalizar Pedido</a></li>
+			        <li><a href="#">404 Error</a></li>
 			    </ul>
 			</nav>
-    		<h2 class="titles-big linha-h2">Finalizar Pedido</h2>
-	    	<div class="metro one-column">
-	    	<p>Para finalizar seu pedido, informe corretamente os dados abaixo.</p>
-		    	<form action="" method="get" accept-charset="utf-8">
-					<label>CPF:</label>
-		    		<div class="input-control text">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
-					</div>
-					<label>CEP:</label>
-					<div class="input-control text">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
-					</div>
-					<label>Logradouro:<label>
-					<div class="input-control text">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
-					</div>
-					<label>Número:</label>
-					<div class="input-control text">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
-					</div>
-					<label>Complemento:</label>
-					<div class="input-control text">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
-					</div>
-					<label>Bairro:</label>
-					<div class="input-control text">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
-					</div>
-					<label>Fone 1:</label>
-					<div class="input-control text">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
-					</div>
-					<label>Fone 2:</label>
-					<div class="input-control text">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
-					</div>
-					<label>UF:</label>
-					<div class="input-control select">
-					    <select>
-					        <option>Value 1</option>
-					        <option>Value 2</option>
-					        <option>Value 3</option>
-					    </select>
-					</div>
-					<label>Cidade:</label>
-					<div class="input-control text">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
-					</div>
-					<input type="submit" value="Finalizar compra" class="right botao-finalizar-compra">
-				</form>
-			</div>
+    		<h2 class="titles-big linha-h2">HTTP 505 ERROR</h2>
 
-	    	<div class="metro one-column box-total">
-				<a href="" title="Continuar Comprando" class="continuar-comprando left">Continuar Comprando</a>
-				<!--a href="" title="Finalizar Compra" class="finalizar-compra">Finalizar Compra</a -->
-	    	</div>
-	    	<div class="metro one-column margin-top">
-	    		<img src='https://p.simg.uol.com.br/out/pagseguro/i/banners/divulgacao/728x90_10X_pagseguro.gif' alt='' />
-	    	</div>
+    		<div class="span10 left">
+    			<h1 class="">Ops... =/</h1>
+    			<p>Houve um erro em nosso sistema. Contate nosso <a href="">Administrador</a> ou volte para página inicial.</p>
+				<p>Desculpe-nos pelo transtorno.</p>
 
+				<a href="" title="" class="continuar-comprando margin-top" style="display: block; width: 35%;">Voltar para página inicial</a>
+    		</div>
+
+    		<div class="span5 left">
+
+    		</div>
+
+			
     	</div><!-- end noticias -->
 	</div><!-- end container -->
-	<footer id="footer" class="clear">
+	<footer id="footer" class="clear ">
 		<div id="footer-content" class="">
 			<div id="redes-sociais">
 				<ul class="">
